objects/PDF_Configuration_Mapping__mdt/PDF_Configuration_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>PDF Configuration Mapping</label>
    <pluralLabel>PDF Configuration Mappings</pluralLabel>
</CustomObject>