objects/PDF_Configuration_Mapping__mdt/fields/Bank_Information__c.field-meta.xml
<CustomField>
    <fullName>Bank_Information__c</fullName>
    <label>Bank Information</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>