objects/PDF_Configuration_Mapping__mdt/fields/Footer_Information__c.field-meta.xml
<CustomField>
    <fullName>Footer_Information__c</fullName>
    <label>Footer Information</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>