objects/PDF_Configuration_Mapping__mdt/fields/Header_Information__c.field-meta.xml
<CustomField>
    <fullName>Header_Information__c</fullName>
    <label>Header Information</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>